--- a/test1/src/components/UI/navbar/navbar.module.css
+++ b/test1/src/components/UI/navbar/navbar.module.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     height: 55px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    background-color: #ffffff;
+    background-color: #ff7f50;
     display: flex;
     overflow-x: auto;
 }
